--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,1 +1,8 @@
-text of abstract
+Software bloat has been growing
+why?
+
+LIM and debloating
+
+Taking it one step further via role based debloating
+
+future work, fully automated offline debloating.
