--- a/thesis.tex
+++ b/thesis.tex
@@ -22,12 +22,12 @@
 \input{callcommands}
 \hyphenation{put words here which LaTeX does not hy-phen-ate pro-per-ly}
 
-\author{AuthorFirst AuthorLast}%
-\title{Title}%
+\author{Babak Amin Azad}%
+\title{Protecting web applications through software debloating}%
 
-\month{June}
-\year{2020}%
-\program{Physics}%
+\month{March}
+\year{2022}%
+\program{Computer Science}%
 \director{Dominik~A.~Schneble}{Professor, Yang Institute of Theoretical Physics}%
 %\chairman{Name of Chairman}{Professor, Department of Physics and Astronomy}%
 \chairman{Robert~Shrock}{Professor,  Yang Institute of Theoretical Physics}%
@@ -42,7 +42,7 @@
 \singlespacing %
 \pagenumbering{roman} %
 \maketitle %
-\makeapproval %
+% \makeapproval %
 
 \begin{abstract}
 \input{sections/abstract}
