--- a/usbthesis.cls
+++ b/usbthesis.cls
@@ -176,10 +176,13 @@ recognize option: \CurrentOption}}
     \if@top
     \setmarginsrb{1.5in}{1in}{1.5in}{1in}{0.125in}{0.2in}{0.125in}{0.5in}
     \fi
+    \newpage
+     \pagebreak
     \begin{center}%
     \setlength{\baselineskip}{14.5pt}%
     \vspace*{0.1in}%
-    {\large Abstract of the \@work}\\%
+%     {\large Abstract of the \@work}\\%
+     {\large Abstract}\\%
     [0.2in]{\textbf{\Large{\@title}}}\\%
 %    [0.2in]{\Huge{\@title}}\\%
 %    {\bf \sc \Huge {\@title\\}}%
