--- a/ref.bib
+++ b/ref.bib
@@ -706,6 +706,14 @@ isbn="978-3-642-23822-2"
   organization={ACM}
 }
 
+@inproceedings{naderi2019malmax,
+  title={Malmax: Multi-aspect execution for automated dynamic web server malware analysis},
+  author={Naderi-Afooshteh, Abbas and Kwon, Yonghwi and Nguyen-Tuong, Anh and Razmjoo-Qalaei, Ali and Zamiri-Gourabi, Mohammad-Reza and Davidson, Jack W},
+  booktitle={Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={1849--1866},
+  year={2019}
+}
+
 @inproceedings{kirda2006noxes,
  author = {Kirda, Engin and Kruegel, Christopher and Vigna, Giovanni and Jovanovic, Nenad},
  title = {{Noxes: A Client-side Solution for Mitigating Cross-site Scripting Attacks}},
