--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,8 @@
 \def\faChecked{\FA\symbol{"F00C}}
 \def\faCrossed{\FA\symbol{"F00D}}
 
+\def\sys{\textit{AnimateDead}}
+
 
 \definecolor{dkgreen}{rgb}{0,.6,0}
 \definecolor{dkblue}{rgb}{0,0,.8}
